--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,41 +1,6 @@
-/* Gilroy Regular */
 @font-face {
     font-family: 'Gilroy';
-    src: url('fonts/Gilroy-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-RegularItalic.ttf') format('truetype');
-    font-weight: 400;
-    font-style: italic;
-    font-display: swap;
-}
-
-/* Gilroy Medium */
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-MediumItalic.ttf') format('truetype');
-    font-weight: 500;
-    font-style: italic;
-    font-display: swap;
-}
-
-/* Gilroy Bold */
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-Bold.ttf') format('truetype');
+    src: url('/fonts/Gilroy-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -43,50 +8,7 @@
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('fonts/Gilroy-BoldItalic.ttf') format('truetype');
-    font-weight: 700;
-    font-style: italic;
-    font-display: swap;
-}
-
-/* Gilroy SemiBold */
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-SemiBold.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-SemiBoldItalic.ttf') format('truetype');
-    font-weight: 600;
-    font-style: italic;
-    font-display: swap;
-}
-
-/* Gilroy Light */
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-Light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-LightItalic.ttf') format('truetype');
-    font-weight: 300;
-    font-style: italic;
-    font-display: swap;
-}
-
-/* Gilroy ExtraBold */
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-ExtraBold.ttf') format('truetype');
+    src: url('/fonts/Gilroy-ExtraBold.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
     font-display: swap;
@@ -94,76 +16,24 @@
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('fonts/Gilroy-ExtraBoldItalic.ttf') format('truetype');
-    font-weight: 800;
-    font-style: italic;
-    font-display: swap;
-}
-
-/* Gilroy Black */
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-Black.ttf') format('truetype');
-    font-weight: 900;
+    src: url('/fonts/Gilroy-Medium.ttf') format('truetype');
+    font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('fonts/Gilroy-BlackItalic.ttf') format('truetype');
-    font-weight: 900;
-    font-style: italic;
-    font-display: swap;
-}
-
-/* Gilroy Thin */
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-Thin.ttf') format('truetype');
-    font-weight: 100;
+    src: url('/fonts/Gilroy-Regular.ttf') format('truetype');
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Gilroy';
-    src: url('fonts/Gilroy-ThinItalic.ttf') format('truetype');
-    font-weight: 100;
-    font-style: italic;
-    font-display: swap;
-}
-
-/* Gilroy UltraLight */
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-UltraLight.ttf') format('truetype');
-    font-weight: 200;
+    src: url('/fonts/Gilroy-SemiBold.ttf') format('truetype');
+    font-weight: 600;
     font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-UltraLightItalic.ttf') format('truetype');
-    font-weight: 200;
-    font-style: italic;
-    font-display: swap;
-}
-
-/* Gilroy Heavy */
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-Heavy.ttf') format('truetype');
-    font-weight: 950;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('fonts/Gilroy-HeavyItalic.ttf') format('truetype');
-    font-weight: 950;
-    font-style: italic;
     font-display: swap;
 }
