--- a/src/assets/css/components/link-us.css
+++ b/src/assets/css/components/link-us.css
@@ -188,6 +188,7 @@
 @media (max-width: 450px) {
     .status-overlay {
         font-size: 16px;
+        text-align: center;
     }
     .link-us-form {
         grid-template-columns: 1fr;
